--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,4 @@ steps:
 
 - task: cmdLine@2
   inputs:
-    script: 'cp target/ROOT.war ./'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathtoPublish: target/ROOT.war
-    artifactName: 'drop'
-
+    script: 'cp target/ROOT.jar ./'
