Modify jar to war

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: target/ROOT.jar
+    pathtoPublish: target/ROOT.war
     artifactName: 'drop'
